# message-in-noise

./: .gitignore  instruction.md  task.toml
environment/: CMakeLists.txt  Dockerfile  adc_buf.h  dsp.c  dsp.h  dsp_mixer.c  fsk_slicer.c  instruction.md  main.c  mock_adc.c  prj.conf
environment/headers/: adc_buf.h  dsp_mixer.h  fsk_slicer.h
solution/: CMakeLists.txt  dsp.c  dsp.h  fsk_test.csv  main.c  mock_adc.c  solve.sh  test_filter.c
solution/build_unittest/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
solution/build_unittest/Kconfig/: Kconfig.modules
solution/build_unittest/Kconfig/arch/: Kconfig
solution/build_unittest/Kconfig/soc/: Kconfig  Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild
solution/build_unittest/modules/acpica/: cmake_install.cmake
solution/build_unittest/modules/adi/: cmake_install.cmake
solution/build_unittest/modules/altera/: cmake_install.cmake
solution/build_unittest/modules/atmel/: cmake_install.cmake
solution/build_unittest/modules/cmsis/: cmake_install.cmake
solution/build_unittest/modules/cmsis-dsp/: cmake_install.cmake
solution/build_unittest/modules/cmsis-nn/: cmake_install.cmake
solution/build_unittest/modules/fatfs/: cmake_install.cmake
solution/build_unittest/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.map  zephyr.stat
tests/: CMakeLists.txt  filter_sweep.csv  fsk_test.csv  mock_adc.c  test.sh  test_outputs.py  test_sweep_backup.c
(+145 files in other folders)
